fix: show filters on left side in large screen

--- a/parijat-frontend/src/components/filters/style.css
+++ b/parijat-frontend/src/components/filters/style.css
@@ -5,3 +5,15 @@
 .RefinementOption__Option {
   width: 10%;
 }
+
+@media (min-width: 839px) {
+  .Filters__Mobile {
+    display: none;
+  }
+}
+
+@media (max-width: 839px) {
+  .Filters__Desktop {
+    display: none;
+  }
+}
