style: style improvements

--- a/parijat-frontend/src/components/searchitem/style.css
+++ b/parijat-frontend/src/components/searchitem/style.css
@@ -1,7 +1,8 @@
 .SearchItem__Container {
-  padding: 1rem;
-  margin-bottom: 1em; 
+  padding: 0.5rem 1rem;
+  margin-bottom: 1rem; 
   width: 100%;
+  background: white;
 }
 
 .SearchItem__Container em {
