Link to the About Us page and add route to it

--- a/parijat-frontend/src/components/footer/style.css
+++ b/parijat-frontend/src/components/footer/style.css
@@ -18,8 +18,7 @@
 
 .Footer__ListItem {
   display: inline;
-  padding-right: 20px;
-  padding-left: 20px;
+  padding: 20px;
 }
 
 .Footer__ListItem > a {
