style: some color scheme

--- a/parijat-frontend/src/components/header/style.css
+++ b/parijat-frontend/src/components/header/style.css
@@ -2,4 +2,10 @@
   height: 3rem;
   overflow: visible;
   padding: 0.5rem;
+  color: black;
+  background: #5ABFA1;
+}
+
+a {
+    color:  #489880;
 }
