--- a/parijat-frontend/src/components/footer/style.css
+++ b/parijat-frontend/src/components/footer/style.css
@@ -1,25 +1,24 @@
 .Footer {
   left: 0;
   bottom: 0;
-  width: 100%;
-  display: inline;
 }
 
 .Footer__Content {
-  text-align: center; /* Allow the centering to work */
+  display: flex;
   margin: 3rem 0;
+  align-items: center;
+  justify-content: center;  
 }
 
 .Footer__List {
   list-style: none;
-  display: inline;
+  display: flex;
+  flex-direction: row;
   padding: 0;
-  margin: 3rem 0;
 }
 
 .Footer__ListItem {
   margin: 2rem;
-  display: inline;
   white-space: nowrap;
 }
 
@@ -29,4 +28,15 @@
 
 .Footer__ListItem > a:hover {
   color: #5ABFA1;
+}
+
+@media only screen and (max-width: 839px) {
+  .Footer__List {
+    flex-direction: column;
+  }
+
+  .Footer__ListItem {
+    margin: 0.5rem;
+    text-align: center;
+  }
 }
