fix: autocomplete search page selection (30)

--- a/parijat-frontend/src/components/searchbox/style.css
+++ b/parijat-frontend/src/components/searchbox/style.css
@@ -83,6 +83,10 @@
   word-wrap: break-word;
 }
 
+.NoSuggestion a {
+  cursor: pointer;
+}
+
 .NoSuggestion__Icon {
   margin-right: 0.25rem;
   margin-left: 0.25rem;
