--- a/parijat-frontend/src/components/header/style.css
+++ b/parijat-frontend/src/components/header/style.css
@@ -4,5 +4,13 @@
   padding: 0.5rem;
   color: black;
   background: #5ABFA1;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.HeaderLogo {
+  width: 11rem;
+  padding-right: 0.75rem;
 }
 
