--- a/parijat-frontend/src/components/searchbox/style.css
+++ b/parijat-frontend/src/components/searchbox/style.css
@@ -79,15 +79,15 @@
 }
 
 .NoSuggestion {
-  padding: 0.5rem;
 }
 
 .NoSuggestion > p {
   display: inline-block;
-  margin: 0.25rem;
   width: 100%;
   white-space: normal;
   word-wrap: break-word;
+  padding: 0;
+  margin: 0;
 }
 
 .NoSuggestion a {
