--- a/parijat-frontend/src/components/transliteratedinput/style.css
+++ b/parijat-frontend/src/components/transliteratedinput/style.css
@@ -14,13 +14,29 @@
   background: transparent;
 }
 
-.TransliteratedInput__Suggestion {
+.TransliteratedInput__Suggestion__Container {
   background: #e9e9e9;
+  padding: 0.25rem;
   border: 1px solid black;
-  white-space: nowrap;
   position: absolute;
   top: 90%;
   left: 20px;
+}
+
+.TransliteratedInput__Suggestion__Container::after {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0px;
+  border-width: 5px;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid black;
+}
+
+.TransliteratedInput__Suggestion {
+  white-space: nowrap;
+  border: 1px solid black;
 }
 
 .TransliteratedInput__Suggestion:hover {
