--- a/parijat-frontend/src/components/transliteratedinput/style.css
+++ b/parijat-frontend/src/components/transliteratedinput/style.css
@@ -37,6 +37,7 @@
 .TransliteratedInput__Suggestion {
   white-space: nowrap;
   border: 1px solid black;
+  padding: 0.5rem 0.75rem;
 }
 
 .TransliteratedInput__Suggestion:hover {
