feature: update admin page with navigation
- chore: replace preact-router with react-router-dom

--- a/parijat-frontend/src/routes/admin/style.css
+++ b/parijat-frontend/src/routes/admin/style.css
@@ -5,6 +5,11 @@
   justify-content: space-between;
 }
 
+.Admin__Container {
+  display: flex;
+  flex-direction: row;
+}
+
 .Admin__Content {
-  padding: 3rem;
+  margin: 2rem;
 }
