--- a/parijat-frontend/src/components/admin/content/style.css
+++ b/parijat-frontend/src/components/admin/content/style.css
@@ -20,6 +20,7 @@
   border: 1px solid grey;
   padding: 0.5rem;
   min-width: 40rem;
+  font-size: x-large;
 }
 
 .ContentNewForm__Field textarea {
@@ -27,4 +28,5 @@
   padding: 0.5rem;
   min-width: 40rem;
   min-height: 20rem;
+  font-size: x-large;
 }
